--- a/README
+++ b/README
@@ -3,4 +3,4 @@ Description
 
 Vim syntax file to highlight mostly nlog files.
 
-Forked from [dzeban/vim-log-syntax](https://github.com/dzeban/vim-log-syntax)
+Forked from (dzeban/vim-log-syntax)[https://github.com/dzeban/vim-log-syntax]
